admin and feedback pages

--- a/client/adminLogIn.html
+++ b/client/adminLogIn.html
@@ -22,7 +22,7 @@
                     <input type="password" id="password" required>
                     <span class="toggle-password" onclick="togglePassword()">Hide</span>
                 </div>
-                <button type="submit" class="login-btn">Log In</button>
+               <button type="submit" class="login-btn">Log In</button>
             </form>
         </div>
 <button class="home-btn" onclick="window.location.href='index.html'">Go back to Home Page</button>
@@ -34,6 +34,6 @@
         <span>@COCSC 2025</span>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="adminLogIn.js"></script>
 </body>
 </html>
