--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
                 <ul>
                     <li><a href="#" class="active">Home</a></li>
                     <li><a href="#">Order</a></li>
-                    <li><a href="#">Feedback</a></li>
+                    <li><a href="feedback.html">Feedback</a></li>
                     <li><a href="#">Processing Logs</a></li>
                     <li><a href="#">About Us</a></li>
                 </ul>
