--- a/client/index.html
+++ b/client/index.html
@@ -235,7 +235,9 @@
                 </div>
                 <div class="footer-extra-logos">
                      <img src="assets/wvsu.png" alt="WVSU Seal">
+                     <a href="adminLogIn.html">
                      <img src="assets/coc.png" alt="COC Seal">
+                    </a>
                 </div>
             </div>
         </div>
