--- a/client/processingLogs.html
+++ b/client/processingLogs.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" type="image/png" href="assets/coc.png" />
-    <title>Feedback - College of Communications</title>
-    <link rel="stylesheet" href="feedback.css">
+    <title>Processing Logs - College of Communications</title>
+    <link rel="stylesheet" href="processingLogs.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 </head>
@@ -23,8 +22,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Order</a></li>
-                    <li><a href="#" class="active">Feedback</a></li>
-                    <li><a href="#">Processing Logs</a></li>
+                    <li><a href="feedback.html">Feedback</a></li>
+                    <li><a href="#" class="active">Processing Logs</a></li>
                     <li><a href="#">About Us</a></li>
                 </ul>
             </nav>
@@ -36,9 +35,8 @@
     <!-- ======================= -->
     <section class="hero">
         <div class="hero-content">
-            <h1>FEEDBACKING</h1>
+            <h1>PROCESSING LOGS</h1>
             <p>Some Description</p>
-            <a href="mailto:coc.sec@wvsu.edu.ph" class="btn-email">Email Us</a>
         </div>
     </section>
 
@@ -46,11 +44,11 @@
     <!--      MAIN CONTENT       -->
     <!-- ======================= -->
     <main class="main-content container">
-        <div class="feedback-container">
-            <div class="feedback-header">
-                <h2>Feedbacking</h2>
+        <div class="content-box">
+            <div class="content-header">
+                <h2>Files</h2>
             </div>
-            <div class="feedback-body">
+            <div class="content-body">
                 <p>...................Coming Soon...................</p>
             </div>
         </div>
@@ -71,7 +69,7 @@
                 <h3>Menu</h3>
                 <ul>
                     <li><a href="#">Orders</a></li>
-                    <li><a href="#">Feedback</a></li>
+                    <li><a href="feedback.html">Feedback</a></li>
                     <li><a href="#">Processing Logs</a></li>
                     <li><a href="#">About Us</a></li>
                 </ul>
