--- a/client/index.html
+++ b/client/index.html
@@ -23,11 +23,11 @@
             </a>
             <nav class="desktop-nav">
                 <ul>
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">Order</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="order.html">Order</a></li>
                     <li><a href="feedback.html">Feedback</a></li>
-                    <li><a href="#">Processing Logs</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="processingLogs.html">Processing Logs</a></li>
+                    <li><a href="aboutUs.html">About Us</a></li>
                 </ul>
             </nav>
             <!-- ADDED: Hamburger Menu Button -->
