add phone feature

--- a/client/index.html
+++ b/client/index.html
@@ -41,11 +41,11 @@
     <div class="mobile-nav" id="mobile-nav">
         <button class="mobile-nav-close" id="mobile-nav-close-btn">×</button>
         <ul>
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Order</a></li>
-            <li><a href="#">Feedback</a></li>
-            <li><a href="#">Processing Logs</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="order.html">Order</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="processingLogs.html">Processing Logs</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
         </ul>
     </div>
 
