--- a/client/processingLogs.html
+++ b/client/processingLogs.html
@@ -30,6 +30,18 @@
         </div>
     </header>
 
+    <!-- ADDED: Mobile Navigation Menu -->
+    <div class="mobile-nav" id="mobile-nav">
+        <button class="mobile-nav-close" id="mobile-nav-close-btn">×</button>
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="order.html">Order</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="processingLogs.html">Processing Logs</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
+        </ul>
+    </div>
+
     <!-- ======================= -->
     <!--       HERO BANNER       -->
     <!-- ======================= -->
