--- a/client/index.html
+++ b/client/index.html
@@ -262,6 +262,7 @@
         <p id="tooltip-description"></p>
     </div>
 
+    <script src="config.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
