--- a/client/setUpEvent.html
+++ b/client/setUpEvent.html
@@ -141,6 +141,7 @@
             </div>
         </main>
     </div>
+    <script src="config.js"></script>
     <script src="setUpEvent.js"></script>
 </body>
 </html>
