--- a/client/index.html
+++ b/client/index.html
@@ -210,7 +210,9 @@
     <footer>
         <div class="container footer-content">
             <div class="footer-info">
-                <img src="assets/COCSC.png" alt="College Logo" class="footer-logo">
+                <a href="adminLogIn.html" style="display: inline-block;">
+                    <img src="assets/COCSC.png" alt="College Logo" class="footer-logo">
+                </a>
                 <p>WVSU College of Communication, Luna St. La Paz<br>Iloilo City, Philippines 5000</p>
                 <p>coc.sec@wvsu.edu.ph</p>
                 <p>admission.coc@wvsu.edu.ph</p>
