--- a/client/adminOrder.html
+++ b/client/adminOrder.html
@@ -59,62 +59,14 @@
                             </tr>
                         </thead>
                         <tbody id="orders-tbody">
-                            <!-- Order 1 -->
-                            <tr class="order-summary" data-name="Elmer Marie Sable">
-                                <td>Elmer Marie Sable</td>
-                                <td>BAB 4A</td>
-                                <td>GCASH</td>
-                                <td>P 1,100.00</td>
-                                <td>0001</td>
-                                <td class="status-paid">Paid</td>
-                                <td class="status-received">Received</td>
-                                <td class="actions">
-                                    <i class="fa-solid fa-chevron-down toggle-details"></i>
-                                    <i class="fa-solid fa-pencil"></i>
-                                    <i class="fa-solid fa-trash"></i>
-                                </td>
-                            </tr>
-                            <tr class="order-details">
-                                <td colspan="8">
-                                    <table class="details-table">
-                                        <thead>
-                                            <tr><th>Name</th><th>Product</th><th>Quantity</th><th>Price</th></tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr><td>Elmer Marie Sable</td><td>COC Nameplate</td><td>1</td><td>P 600.00</td></tr>
-                                            <tr><td></td><td>COC Type B Uniform</td><td>1</td><td>P 500.00</td></tr>
-                                        </tbody>
-                                    </table>
-                                </td>
-                            </tr>
-                            
-                            <!-- Order 2 -->
-                            <tr class="order-summary" data-name="Christine Elijah Porras">
-                                <td>Christine Elijah Porras</td>
-                                <td>BAB 3A</td>
-                                <td>CASH</td>
-                                <td>P 700.00</td>
-                                <td>0002</td>
-                                <td class="status-not-paid">Not Paid</td>
-                                <td class="status-not-received">Not Received</td>
-                                <td class="actions">
-                                    <i class="fa-solid fa-chevron-down toggle-details"></i>
-                                    <i class="fa-solid fa-pencil"></i>
-                                    <i class="fa-solid fa-trash"></i>
-                                </td>
-                            </tr>
-                            <tr class="order-details">
-                               <td colspan="8"><div class="no-details">No item details available.</div></td>
-                            </tr>
-
-                            <!-- Add more orders following the same pattern -->
-
+                            <!-- Orders will be loaded dynamically from the API -->
                         </tbody>
                     </table>
                 </div>
             </div>
         </main>
     </div>
+    <script src="config.js"></script>
     <script src="adminOrder.js"></script>
 </body>
 </html>
