Add edit functionality to announcements and events

--- a/client/admin.html
+++ b/client/admin.html
@@ -21,7 +21,7 @@
                     <li class="active"><a href="admin.html"><i class="fa-solid fa-tachograph-digital"></i> Dashboard</a></li>
                     <li><a href="adminFeedback.html"><i class="fa-solid fa-users"></i> Feedbacks</a></li>
                     <li><a href="adminOrder.html"><i class="fa-solid fa-box-archive"></i> Orders</a></li>
-                    <li><a href="setUpEvent.html"><i class="fa-solid fa-calendar-days"></i> Calendar</a></li>
+                    <li><a href="setUpEvent.html"><i class="fa-solid fa-calendar-days"></i> Set-up Event</a></li>
                     <li><a href="createAnnouncement.html"><i class="fa-solid fa-bullhorn"></i> Announcements</a></li>
                 </ul>
             </nav>
